--- a/src/css/style.css
+++ b/src/css/style.css
@@ -33,7 +33,7 @@ header {
 
 header img {
 
-    height: 36px;
+    height: 76px;
     margin-right: 16px;
    
 }
@@ -56,13 +56,17 @@ form {
 
 form input {
 
-    font-size: 24px;
+    font-size: 34px;
     background: #fff;
     border: none;
     border-bottom: 2px solid black;
-    padding: 8px;
+    padding: 18px;
    
 
+}
+
+input {
+    margin-right: 5px;
 }
 
 form button {
@@ -72,8 +76,16 @@ form button {
     font-size: 24px;
     font-weight: bold;
     border: none;
+    border-radius: 4px;
     cursor: pointer;
     padding: 8px;
+}
+
+
+form button:hover {
+
+    background: #06c545;
+
 }
 /* 
 Table
